--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "start": "nodemon server.js",
     "test": "mocha"
   },
+  "engines": {
+  "node": "7.2.1"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gschool/galvanize-bookshelf.git"
