--- a/package.json
+++ b/package.json
@@ -4,16 +4,12 @@
   "description": "Create a web application to manage your book collection",
   "main": "server.js",
   "scripts": {
-    "heroku-postbuild": "knex migrate:latest",
     "knex": "knex",
-    "lint": "eslint  --ignore-pattern public/js/vendor",
-    "nf": "nf start",
-    "start": "nodemon server.js",
-    "test": "mocha"
+    "heroku-postbuild": "knex migrate:latest"
   },
   "engines": {
-  "node": "7.2.1"
-},
+    "node": "7.4.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gschool/galvanize-bookshelf.git"
@@ -49,8 +45,5 @@
     "mocha": "^2.5.3",
     "nodemon": "^1.10.0",
     "supertest": "^1.2.0"
-  },
-  "engines": {
-    "node": "7.4.0"
   }
 }
